feat ui: Implement Modal component with dynamic content rendering and opening behavior
Created two components:
- `ModalMessage`: Manages modal visibility and content rendering based on `isOpen` prop. Utilizes `useState` and `useEffect` hooks to handle modal opening and closing, with cleanup of timer after each use.

--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -10,6 +10,7 @@
   flex: none;
   border-radius: $raduisBtn;
   border: 2px solid $colorPrimaryBase;
+  border: 2px solid $colorPrimaryBase;
   position: relative;
   transition: all 0.3s linear !important;
   display: flex;
