Refactor getUrlVideo function to check for video availability
Updated the getUrlVideo function to first filter the response data for videos of type "Clip" or "Trailer". Then, the function checks if each video exists by sending a HEAD request to its URL. If an available video is found, its URL is returned. If no available video is found, the function returns null. This ensures that only existing videos are returned and handled properly in the application.

--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -112,7 +112,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 25px;
+  padding: 0px !important;
   transition: all 0.3s linear;
 
   & * {
@@ -123,7 +123,7 @@
 .container-modal-video {
   background: $colorNeutral1;
   border-radius: 0.8rem;
-  padding: 25px;
+  padding: 3px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -138,6 +138,7 @@
   width: 90%;
 
   height: 60%;
+  padding-bottom: 20px !important;
 
   & iframe {
     height: 100%;
