feat: Handle email existence check during signup
In the signup function, added logic to check if the provided email already exists in the database. If it does, return an error message to inform the user. Otherwise, proceed with creating a new user.

If the email already exists:
- Display an error message: "Un compte avec cet email existe déjà. Veuillez utiliser une autre adresse email ou connectez-vous si vous avez déjà un compte."

If the email is unique:
- Create a new user in the database

--- a/components/form/style.scss
+++ b/components/form/style.scss
@@ -36,6 +36,12 @@
     }
   }
 }
+.input_box_form:-webkit-autofill,
+.input_box_form:-webkit-autofill:hover,
+.input_box_form:-webkit-autofill:focus,
+.input_box_form:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
 
 .input_box_form:has(:user-invalid) {
   & .input__form__box {
