--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -22,6 +22,14 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 .Toastify__toast-container {
   & * {
     font-family: $fontRegular !important;
