--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -27,7 +27,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px white inset !important;
+  -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0) inset !important;
 }
 
 .Toastify__toast-container {
