--- a/app/verify-email/style.scss
+++ b/app/verify-email/style.scss
@@ -23,8 +23,13 @@
     margin-bottom: 15px;
     font-family: $fontRegular;
     font-size: 0.9rem;
-    opacity: 0.7;
+    color: rgba(255, 255, 255, 0.575);
     line-height: 1.2rem;
+
+    & strong {
+      font-weight: bold;
+      color: white;
+    }
   }
 }
 .container__right {
@@ -83,13 +88,14 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 2px;
+  gap: 5px;
 
-  a {
+  span {
     font-family: $fontMedium;
     font-size: 0.9rem;
     color: $colorPrimaryBase;
     align-self: end;
+    cursor: pointer;
   }
 }
 
