add meta data about  page and auth logic

--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -616,9 +616,9 @@
     opacity: 1;
     display: flex !important;
   }
-  // & .response__faq {
-  //   opacity: 1;
-  //   height: auto;
-  //   display: flex !important;
-  // }
+  & .response__faq {
+    opacity: 1;
+    height: auto;
+    display: flex !important;
+  }
 }
