--- a/app/onboarding-profil/style.scss
+++ b/app/onboarding-profil/style.scss
@@ -53,12 +53,14 @@
   border-radius: 50%;
   background: $colorPrimaryBase;
   flex: none;
-  border: 2px solid $colorPrimaryBase;
+  border: 5px solid $colorPrimaryBase;
+
   img {
     height: 100% !important;
     width: 100% !important;
     flex: none !important;
     object-fit: cover;
+    border-radius: 50%;
   }
 }
 
