feat(favorites): Implement favorite toggle functionality
This commit introduces the ability for users to add or remove movies from their favorites directly from the movie details page. It leverages the existing useMutation hooks for adding and removing favorites, and updates the UI accordingly based on the current state of user's favorites.

Changes include:
- Updated useEffect in MovieDetails component to check if the current movie is favorited on component mount, setting the isFavorite state based on the response.
- Implemented handlerClickFavoriteMovie function that toggles the favorite state of the movie. It checks the current state (isFavorite), then calls either addMovieAsFavorite or removeMovieFromFavorites mutation based on that state. After the mutation response, it updates the isFavorite state to reflect the new status.
- Added isLoading states for button and movie information display to improve user experience during API calls.
- Ensured proper error handling in mutations, displaying console errors for debugging purposes.

This feature enhances the user interaction by allowing easy management of favorite movies, making the movie browsing experience more personalized.

--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -397,8 +397,8 @@
 }
 
 .card-movie-skeleton-loading {
-  width: 500px;
   cursor: not-allowed;
+  height: 200px;
   &:hover {
     transform: none;
     box-shadow: none;
