--- a/app/favoris/style.scss
+++ b/app/favoris/style.scss
@@ -60,8 +60,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  row-gap: 25px;
+  row-gap: 5px;
   width: 100%;
+  padding-bottom: 50px !important;
   & img {
     height: 90% !important;
     width: 90% !important;
