--- a/app/favoris/style.scss
+++ b/app/favoris/style.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  padding-bottom: 55px !important;
   & .content-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
