update header.tsx, style.scss and style.scss

--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -19,6 +19,7 @@
     font-family: $fontBold;
     font-size: 1.5rem;
     text-transform: uppercase;
+    text-decoration: none !important;
     & span {
       color: #cc8900;
     }
