fix bugs auth verify email

--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -20,6 +20,7 @@
     font-size: 1.5rem;
     text-transform: uppercase;
     text-decoration: none !important;
+    cursor: pointer;
     & span {
       color: #cc8900;
     }
