--- a/app/onboarding-profil/style.scss
+++ b/app/onboarding-profil/style.scss
@@ -28,7 +28,7 @@
   .items {
     border-radius: 0.3rem;
     height: 5px;
-    background: $colorPrimary100;
+    background: $colorPrimaryBase;
   }
 }
 
