update 8 files, ending passordReset feature

--- a/app/myprofil/style.scss
+++ b/app/myprofil/style.scss
@@ -64,6 +64,7 @@
   position: relative;
   row-gap: 15px;
   padding-bottom: 30px !important;
+  max-width: 500px;
   h3 {
     font-family: $fontBold;
     font-size: 1rem;
