add loading page

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -1,6 +1,7 @@
 @import "./variable.scss";
 @import "./reset.scss";
 @import "./mixin.scss";
+@import "nprogress/nprogress.css";
 html {
   scroll-behavior: smooth;
   user-select: none;
