--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -207,6 +207,26 @@ input:-webkit-autofill:active {
 .banner-loading {
   margin-top: 150px !important;
 }
+
+#notFoundPage {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+  height: 100vh !important;
+  h1 {
+    font-family: $fontBold;
+    font-size: 3rem;
+    color: $colorPrimaryBase;
+  }
+  p {
+    color: rgba(white, 0.7);
+  }
+  a {
+    color: $colorPrimaryBase;
+  }
+}
 @media only screen and (max-width: 1070px) {
   $paddingSection: 20px;
   .sections__movies {
